logs/cir-cuda/3MM_3mm.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/3MM -std=c++17 -O0 -c /root/polybenchGpu/HIP/3MM/3mm.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/3MM -o /tmp/3MM_3mm.hip.cpp.cir.o

/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:97:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
   97 |         hipGetDeviceProperties(&deviceProp, GPU_DEVICE);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.3.0/include/hip/hip_runtime_api.h:91:32: note: expanded from macro 'hipGetDeviceProperties'
   91 | #define hipGetDeviceProperties hipGetDevicePropertiesR0600
      |                                ^
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:99:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
   99 |         hipSetDevice( GPU_DEVICE );
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:225:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  225 |         hipMalloc((void **)&A_gpu, sizeof(DATA_TYPE) * NI * NK);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:226:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  226 |         hipMalloc((void **)&B_gpu, sizeof(DATA_TYPE) * NK * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:227:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  227 |         hipMalloc((void **)&C_gpu, sizeof(DATA_TYPE) * NJ * NM);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:228:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  228 |         hipMalloc((void **)&D_gpu, sizeof(DATA_TYPE) * NM * NL);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:229:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  229 |         hipMalloc((void **)&E_gpu, sizeof(DATA_TYPE) * NI * NJ);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:230:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  230 |         hipMalloc((void **)&F_gpu, sizeof(DATA_TYPE) * NJ * NL);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:231:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  231 |         hipMalloc((void **)&G_gpu, sizeof(DATA_TYPE) * NI * NL);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:233:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  233 |         hipMemcpy(A_gpu, A, sizeof(DATA_TYPE) * NI * NK, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:234:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  234 |         hipMemcpy(B_gpu, B, sizeof(DATA_TYPE) * NK * NJ, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:235:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  235 |         hipMemcpy(C_gpu, C, sizeof(DATA_TYPE) * NJ * NM, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:236:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  236 |         hipMemcpy(D_gpu, D, sizeof(DATA_TYPE) * NM * NL, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:237:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  237 |         hipMemcpy(E_gpu, E, sizeof(DATA_TYPE) * NI * NJ, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:238:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  238 |         hipMemcpy(F_gpu, F, sizeof(DATA_TYPE) * NJ * NL, hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:239:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  239 |         hipMemcpy(G_gpu, G, sizeof(DATA_TYPE) * NI * NL, hipMemcpyHostToDevice);        
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:250:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  250 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:252:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  252 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:254:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  254 |         hipDeviceSynchronize();
      |         ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:260:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  260 |         hipMemcpy(G_outputFromGpu, G_gpu, sizeof(DATA_TYPE) * NI * NL, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:262:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  262 |         hipFree(A_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:263:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  263 |         hipFree(B_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:264:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  264 |         hipFree(C_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:265:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  265 |         hipFree(D_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:266:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  266 |         hipFree(E_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:267:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  267 |         hipFree(F_gpu);
      |         ^~~~~~~~~~~~~~
/root/polybenchGpu/HIP/3MM/3mm.hip.cpp:268:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  268 |         hipFree(G_gpu);
      |         ^~~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/3mm-gfx942-dee1f2.hip
clang-23: note: diagnostic msg: /tmp/3mm-f48626.hip
clang-23: note: diagnostic msg: /tmp/3mm-gfx942-dee1f2.sh
clang-23: note: diagnostic msg: 

********************
